--- a/src/css/style.css
+++ b/src/css/style.css
@@ -191,6 +191,7 @@ header {
   align-items: center;
   flex-direction: column;
   border-radius: 50%;
+  box-shadow: 0px 8px 33px -9px rgba(0, 0, 0, 0.75);
 }
 .category:hover {
   transform: scale(1.1);
@@ -225,4 +226,78 @@ header {
 .category-img {
   width: 60%;
   padding: 0;
+}
+.new-products {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+.products {
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  gap: 1em;
+}
+.product {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: 22%;
+  font-size: 1em;
+  text-align: center;
+  box-shadow: 0px -1px 10px -1px rgba(0, 0, 0, 0.75);
+  padding: 2em;
+}
+.title-product {
+  color: var(--sky);
+}
+.rating {
+  direction: rtl;
+  unicode-bidi: bidi-override;
+}
+.rating input {
+  display: none;
+}
+.rating label {
+  color: grey;
+}
+.rating label:hover,
+.rating label:hover ~ label {
+  color: var(--yellow);
+}
+.rating input[type="radio"]:checked ~ label {
+  color: var(--yellow);
+}
+footer {
+  width: 100%;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  gap: 1em;
+}
+.social-bar {
+  width: 20%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+}
+.social-bar a {
+  color: var(--yellow);
+  font-size: 2em;
+}
+.copyright {
+  text-align: center;
+  color: var(--sky)
+}
+.logo-footer {
+  width: 10%;
+  margin-right: 1.5em;
 }
