--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,7 +48,7 @@ header {
   display: flex;
   flex-direction: column;
 }
-.top {
+.banner-top {
   padding: 0.3em 1em;
   width: 100%;
   display: flex;
@@ -134,21 +134,91 @@ header {
   gap: 1em;
 }
 .gallery {
+  width: 90%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-content: center;
   align-items: center;
-  gap: 1em;
+  align-content: center;
 }
-.gallery-controls {
-  width: 10%;
+.scene {
+  perspective: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
 }
-.gallery-img {
-  width: 50%;
+.cube {
+  transform-style: preserve-3d;
+  position: relative;
+  margin: 5em 0;
+  width: 300px;
+  height: 300px;
+  animation: rotate 23s ease-in-out infinite;
+  transform-origin: center center;
 }
-.gallery-img img {
-  border-radius: 1em;
-  box-shadow: 7px 5px 19px -7px rgba(0, 0, 0, 0.75);
+.side {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  background-color: #333;
+  opacity: .95;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.back {
+  transform: translateZ(-150px) rotateX(180deg);
+  background-image: url(../img/cube3.png);
+}
+.left {
+  transform: translateX(-150px) rotateY(90deg);
+  background-image: url(../img/cube4.png);
+}
+.right {
+  transform: translateX(150px) rotateY(90deg);
+  background-image: url(../img/cube5.png);
+}
+.top {
+  transform: translateY(-150px) rotateX(90deg);
+  background-image: url(../img/cube2.png);
+}
+.bottom {
+  transform: translateY(150px) rotateX(270deg);
+  background-image: url(../img/cube1.png);
+}
+.front {
+  transform: translateZ(150px);
+  background-image: url(../img/logo.jpg);
+}
+@keyframes rotate {
+  0% {
+    transform: rotateX(0);
+  }
+  12.5% {
+    transform: rotateY(90deg);
+  }
+  25% {
+    transform: rotateY(270deg);
+  }
+  37.5% {
+    transform: rotateY(270deg);
+  }
+  50% {
+    transform: rotateY(360deg);
+  }
+  62.5% {
+    transform: rotateX(90deg);
+  }
+  75% {
+    transform: rotateX(180deg);
+  }
+  87.5% {
+    transform: rotateX(270deg);
+  }
+  100% {
+    transform: rotateX(360deg);
+  }
 }
 .info-about {
   padding: 1em;
