--- a/src/css/style.css
+++ b/src/css/style.css
@@ -539,6 +539,152 @@ footer {
   margin-right: 1.5em;
 }
 
+/*------CONTACTO----*/
+
+#contact {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../img/bg.png);
+  background-color: var(--grey);
+  padding-bottom: 3em;
+}
+.info-empresa {
+  list-style: none;
+  padding: 0;
+}
+
+.item-empresa {
+  margin-bottom: 2em;
+  font-size: 1.3em;
+}
+
+.item-empresa i {
+  margin-right: 1rem;
+  font-size: 1.5em;
+  color: var(--yellow);
+}
+
+.wrapper {
+  box-shadow: 7px 9px 15px -3px rgba(0, 0, 0, 0.75);
+  margin-top: 3em;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+  background: rgba(168, 30, 127, 0.466);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(3.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.wrapper>* {
+  padding: 1em;
+}
+
+.company-info {
+  background: rgba(168, 30, 127, 0.521);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(3.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  padding: 1em;
+  height: 100%;
+}
+
+.company-info h3,
+.info-empresa {
+  text-align: center;
+}
+
+.contact {
+  background: rgba(0, 211, 215, 0.541);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(3.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.contact form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.contact form label {
+  display: block;
+  font-size: 1em;
+}
+
+.contact form p {
+  margin: 0;
+}
+
+.contact form .full {
+  grid-column: 1/3;
+}
+
+.contact form input,
+.contact form textarea {
+  width: 100%;
+  padding: 1em;
+  border-radius: 20px;
+  background: transparent;
+  font-size: 1em;
+  font-weight: 700;
+}
+
+.contact form input:hover,
+.contact form textarea:hover {
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 4px 4px 60px 8px rgba(0, 0, 0, 0.2);
+}
+
+form input:active,
+form textarea:active {
+  background: rgba(255, 255, 255, 0.418);
+  box-shadow: 4px 4px 60px 8px rgba(0, 0, 0, 0.2);
+}
+
+.full button {
+  width: 100%;
+  font-size: 1.5em;
+}
+
+.email {
+  color: black;
+}
+
+@media (min-width:768px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .wrapper>* {
+    padding: 2em;
+  }
+
+  .company-info h3,
+  .company-info ul {
+    text-align: left;
+  }
+}
+
 @media (max-width:860px) {
   .banner {
     justify-content: space-around;
@@ -550,13 +696,15 @@ footer {
 
   .selector {
     display: block;
+    position: fixed;
+    z-index: 1;
   }
 
   .menu-box {
     position: fixed;
     width: 40%;
     height: 100vh;
-    top: 30vh;
+    top: 40vh;
     left: -100%;
     text-align: left;
     transition: all .8s;
@@ -604,6 +752,14 @@ footer {
   .product {
     height: 100vh;
   }
+
+  .img-product img {
+    max-height: 30vh;
+  }
+
+  .full {
+    width: 90%;
+  }
 }
 
 @media (max-width:650px) {
@@ -640,7 +796,7 @@ footer {
   }
 
   .menu-box {
-    top: 35vh;
+    top: 50vh;
     width: 60%;
   }
 
