--- a/src/css/style.css
+++ b/src/css/style.css
@@ -152,6 +152,7 @@ header {
   padding: 1em;
   text-align: center;
 }
+
 .menu-box li a {
   color: black;
   text-decoration: none;
@@ -167,7 +168,8 @@ header {
   cursor: pointer;
   display: none;
   margin-left: 1rem;
-  border: solid 2px var(--yellow);
+  border: solid 2px var(--sky);
+  background-color: var(--grey);
   padding: .2rem;
   border-radius: .1rem;
 }
@@ -402,7 +404,7 @@ header {
   padding: 0;
 }
 
-.new-products {
+.new-novelties {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -410,7 +412,7 @@ header {
   align-items: center;
 }
 
-.products {
+.novelties {
   display: flex;
   justify-content: space-around;
   align-content: center;
@@ -419,7 +421,7 @@ header {
   gap: 1em;
 }
 
-.products-row {
+.novelties-row {
   display: flex;
   justify-content: space-around;
   align-content: center;
@@ -428,7 +430,7 @@ header {
   gap: 1em;
 }
 
-.product {
+.novelty {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -442,11 +444,11 @@ header {
   gap: 1em;
 }
 
-.info-product {
+.info-novelty {
   width: 100%;
 }
 
-.title-product {
+.title-novelty {
   color: var(--sky);
 }
 
@@ -542,30 +544,101 @@ footer {
   margin-right: 1.5em;
 }
 
+/*----CATÁLOGO----*/
 
+.catalogue {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  gap: 1em;
+}
 
+.catalog-row {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  width: 100%;
+  gap: 1em;
+  padding-bottom: 3em;
+  border-bottom: var(--blue) 1px solid;
+}
 
+.catalog-cont {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  gap: 1em;
+  width: 40%;
+}
 
+.catalog-card {
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  background-color: var(--purple);
+  height: 90vh;
+  width: 50%;
+  border-radius: 10px;
+}
 
+.card-info {
+  text-align: center;
+  color: var(--grey);
+}
 
+/*----VER DETALLES----*/
 
+.to-return a {
+  text-decoration: none;
+  color: var(--white);
+}
+main {
+  background-image: url(../img/bg.png);
+  background-size: contain;
+  margin-bottom: 2em;
+}
+.view {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  gap: 1em;
+  padding: 1.5em;
+}
 
+.view-name {
+  text-shadow: 4px -2px 3px rgba(254, 209, 22, 1);
+}
+.view-img {
+  width: 40%;
+}
 
+.view-info {
+  width: 45%;
+  text-align: justify;
+  padding: 1em;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.view-price {
+  text-align: center;
+  color: var(--purple);
+  font-weight: 700;
+  font-size: 1.5em;
+}
 
 /*----DELIVERY Y PAGO----*/
 
@@ -619,11 +692,13 @@ footer {
   box-shadow: 0px 8px 33px -9px rgba(0, 0, 0, 0.75);
 }
 
-#dollar, #mercantil {
+#dollar,
+#mercantil {
   background-color: var(--sky);
 }
 
-#paypal, #pago-movil {
+#paypal,
+#pago-movil {
   background-color: var(--yellow);
 }
 
@@ -631,7 +706,8 @@ footer {
   background-color: var(--purple);
 }
 
-#mony, #zelle {
+#mony,
+#zelle {
   background-color: #8dff2f;
 }
 
@@ -693,6 +769,7 @@ footer {
 .tip-img {
   width: 30%;
 }
+
 .tip-img img {
   border-radius: 10px;
 }
@@ -719,6 +796,7 @@ footer {
   background-color: var(--grey);
   padding-bottom: 3em;
 }
+
 .info-empresa {
   list-style: none;
   padding: 0;
@@ -870,6 +948,7 @@ form textarea:active {
     display: block;
     position: fixed;
     z-index: 1;
+    
   }
 
   .menu-box {
@@ -911,21 +990,21 @@ form textarea:active {
     width: 90%;
   }
 
-  .products {
+  .novelties {
     flex-direction: column;
     justify-content: center;
     width: 100%;
   }
 
-  .products-row {
+  .novelties-row {
     width: 90%;
   }
 
-  .product {
+  .novelty {
     height: 100vh;
   }
 
-  .img-product img {
+  .img-novelty img {
     max-height: 30vh;
   }
 
@@ -940,6 +1019,25 @@ form textarea:active {
   .payments-row {
     flex-direction: column;
   }
+
+  .catalog-row {
+    flex-direction: column;
+  }
+
+  .catalog-cont {
+    width: 80%;
+  }
+
+  .catalog-card {
+    height: 100%;
+  }
+
+  .view {
+    flex-direction: column;
+  }
+  .view-img, .view-info {
+    width: 80%;
+  }
 }
 
 @media (max-width:650px) {
@@ -951,13 +1049,23 @@ form textarea:active {
     flex-direction: column;
   }
 
-  .products-row {
+  .novelties-row {
     flex-direction: column;
   }
 
-  .product {
+  .novelty {
     width: 80%;
     height: 100vh;
+  }
+
+  .catalog-cont {
+    flex-direction: column;
+    width: 80%;
+  }
+
+  .catalog-card {
+    height: 90%;
+    width: 100%;
   }
 }
 
@@ -980,7 +1088,7 @@ form textarea:active {
     width: 60%;
   }
 
-  .product {
+  .novelty {
     width: 100%;
     height: 100vh;
   }
