--- a/src/css/style.css
+++ b/src/css/style.css
@@ -149,17 +149,22 @@ header {
 
 .menu-box li {
   width: 20%;
-  padding: 1em;
   text-align: center;
 }
 
-.menu-box li a {
+.menu-box a {
   color: black;
   text-decoration: none;
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  display: block;
 }
 
-.menu-box li:hover {
+.menu-box a:hover {
   background-color: var(--yellow);
+  width: 100%;
+  height: 100%;
 }
 
 .selector {
@@ -496,6 +501,7 @@ header {
   display: block;
   font-family: var(--fontCont);
   font-size: 1em;
+  cursor: pointer;
 }
 
 .btn-grad:hover {
@@ -981,6 +987,10 @@ form textarea:active {
     padding: 2em;
   }
 
+  .company-info {
+    width: 100%;
+  }
+
   .company-info h3,
   .company-info ul {
     text-align: left;
@@ -1000,14 +1010,13 @@ form textarea:active {
     display: block;
     position: fixed;
     z-index: 1;
-    
   }
 
   .menu-box {
     position: fixed;
     width: 40%;
     height: 100vh;
-    top: 25vh;
+    top: 40vh;
     left: -100%;
     text-align: left;
     transition: all .8s;
@@ -1136,13 +1145,18 @@ form textarea:active {
   }
 
   .menu-box {
-    top: 30vh;
+    top: 45vh;
     width: 60%;
   }
 
   .novelty {
     width: 100%;
     height: 100vh;
+  }
+
+  .company-info {
+    width: 100%;
+    font-size: 0.8em;
   }
 
   footer {
